# hybrid-frame

./: .gitignore  AUDIT_AND_PLAN.md  AUDIT_REPORT.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PRODUCTION_PLAN.md  README.md  _test_edge_cases.py  bench_hybrid_frame.py  bench_memory.py  create_demo.py  demo.py  hybrid_frame.pyi  pyproject.toml  test_hybrid_frame.py  test_hybrid_frame_hypothesis.py  test_hybrid_frame_pytest.py
.github/workflows/: ci.yml
.hypothesis/constants/: 3624038aaca4f5a0  4b0a9a1f2e05eec2  54e08df38e542792  9eb2f9706726552f  b14455c4727127a7  c7b86e8c7fb30ce8  f0aee427b6b0ae4c
.hypothesis/examples/04e6b3400353b141/: 0ea2d402f61dfc38  42c4100c261616d9
.hypothesis/examples/0ea2d402f61dfc38/: 3f873f2e74f4e356  86182010766a05a4
.hypothesis/examples/42c4100c261616d9/: 0453995f11e889e1  06a00ba179d3b7aa  0ad952e335de6daa  0d5fa011e6a0b35d  0d627ac852e6c0de  12d3390f5b7d6cee  2038fb5a42b6018a  249a6706d70b3b15  322c8ef6ab292265  3a8e231061ef0da7  52ffe478aee5d9cc  7af521ef248233b1  8d346ae6a944e302  951bc64ccbc43619  9e60884a09ee6da5  df474455feb6e6ec  ef45946b2d061cce
examples/: demo.ipynb
hybrid_frame/: __init__.py
video/: README.md  composition.html  render.sh
