[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-frame"
version = "0.3.0"
description = "High-performance DataFrame unifying DuckDB (out-of-core) and Pandas (ML feature engineering)"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "mukesh" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    "duckdb>=0.8.0",
    "pandas>=1.5.0",
]
[project.optional-dependencies]
arrow = ["pyarrow>=6.0.0"]
memory-guard = ["psutil>=5.9.0"]
ml = ["scikit-learn>=1.2.0"]
all = [
    "pyarrow>=6.0.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/shell-bay/hybrid-frame"
Repository = "https://github.com/shell-bay/hybrid-frame"

[tool.setuptools]
packages = ["hybrid_frame"]

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
